# coldcopy

./: .gitignore  .vercelignore  ADMIN_SETUP_GUIDE.md  API_TESTING_DOCUMENTATION.md  AUTH_CALLBACK_FIX.md  AWS_SES_PRODUCTION_REQUEST.md  AWS_SES_PRODUCTION_REQUEST_TEMPLATE.md  BUILD_RESOLUTION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  COLDCOPY_100_PERCENT_COMPLETE.md  COLDCOPY_DESIGN_SYSTEM.md  COLDCOPY_TEST_REPORT.md  COMPREHENSIVE_TESTING_FRAMEWORK.md  CRITICAL_DATABASE_SETUP.sql  ColdCopy PRD.txt  DATABASE_SETUP_INSTRUCTIONS.md  DEMO_CONTENT_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CHECKLIST_FINAL.md  DEPLOYMENT_COMMANDS.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_COMPLETE_SUMMARY.md  DEPLOYMENT_DAY_RUNBOOK.md  DEPLOYMENT_FINAL_STATUS.md  DEPLOYMENT_RECOVERY_GUIDE.md  DEPLOYMENT_STATUS.md  EMAIL_STATUS.md  EXECUTE_SQL_SCRIPTS_GUIDE.md  FINAL_TESTING_SUMMARY.md  FINAL_TEST_REPORT_100_PERCENT.md  FIXES_APPLIED_JAN_2025.md  INFRASTRUCTURE_STATUS_REPORT.md  LAUNCH_CHECKLIST.md  LIVE_DEPLOYMENT_STATUS.md  MANUAL_DEPLOYMENT_GUIDE.md  MANUAL_TESTING_CHECKLIST.md  NEXT_SESSION_PRIORITIES.md  NEXT_SESSION_SUMMARY.md  NEXT_SESSION_TODO.md  (+129 more)
apps/api/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  app.yaml  docker-compose.yml  main.py  main_simple.py  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-do.txt  requirements-minimal.txt  requirements-simplified.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/config/: pgbouncer.py  redis.py
apps/api/core/: config.py  database.py  redis.py  security.py  versioning.py
apps/api/docs/: COMPOSITE_INDEXES.md  PARTITION_MANAGEMENT.md  redis_caching.md  webhook_setup.md
apps/api/examples/: redis_usage_examples.py
apps/api/middleware/: cache_middleware.py  rate_limiting.py
apps/api/models/: ab_testing.py  calendar.py  campaign.py  campaign_email.py  email_event.py  email_events.py  email_messages.py  email_template.py  email_warmup.py  gdpr.py  lead.py  lead_scoring.py  reply_assistant.py  user.py  workspace.py
apps/api/routers/: ab_testing.py  analytics.py  api_versions.py  auth.py  cache_management.py  calendar.py  campaigns.py  database_optimization.py  database_pooling.py  email.py  email_templates.py  gdpr.py  health.py  lead_scoring.py  leads.py  partitions.py  rate_limits.py  reply_assistant.py  ses_email.py  system.py  warmup.py  webhooks.py  workspaces.py
apps/api/scripts/: redis_performance_test.py  redis_setup.sh  start_workers.sh  stop_workers.sh  worker_status.sh
apps/api/services/: ab_testing_service.py  cache_warming_service.py  cached_ai_service.py  cached_enrichment_service.py  calendar_service.py  campaign_service.py  email_template_service.py  gdpr_service.py  lead_scoring_service.py  lead_service.py  partition_manager.py  reply_assistant_service.py  user_service.py  warmup_service.py  workspace_service.py
apps/api/startup/: cache_setup.py
apps/api/tests/: __init__.py  conftest.py  test_api_endpoints.py  test_cache_system.py  test_index_optimization.py  test_integration.py  test_partition_management.py  test_performance.py  test_pgbouncer.py  test_rate_limiting.py  test_run.py  test_security.py  test_versioning.py  test_webhooks.py
apps/api/utils/: __init__.py  advanced_rate_limiting.py  analytics_manager.py  cache_manager.py  (+10 more)
(+2120 files in other folders)
